@@ -43,6 +43,7 @@ Version 2.1.0
   + Group objects have a new "dont_merge" attribute to prevent them from
     being automatically merged with identical parent or children.
 * Backends
+  + Add support for Linux 5.2 new sysfs cpu topology files.
   + Add support for Intel v2 Extended Topology Enumeration in the x86 backend.
     Tiles, Modules and Dies are exposed as Groups for now.
   + Improve memory locality on Linux by using HMAT initiators (exposed
